--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeDemo">
         <activity
+            android:name=".guesture.MainActivityFreeDrag"
+            android:exported="false"
+            android:label="@string/title_activity_main_free_drag"
+            android:theme="@style/Theme.ComposeDemo" />
+        <activity
+            android:name=".custom_theme.MainActivityTheme"
+            android:exported="false"
+            android:label="@string/title_activity_main_theme"
+            android:theme="@style/Theme.ComposeDemo" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.ComposeDemo">
